--- a/src/styles/Hero.css
+++ b/src/styles/Hero.css
@@ -7,7 +7,7 @@
   .hero-image {
     width: 100%;
     height: 400px;
-    object-fit: cover;
+    object-fit:contain;
     filter: brightness(50%);
   }
   
